Fix #10163 - Profile Icon and Name alignment issues

--- a/themes/SuiteP/css/suitep-base/navbar.scss
+++ b/themes/SuiteP/css/suitep-base/navbar.scss
@@ -704,7 +704,7 @@
   font-size: $navbar-toolbar-height - 2px;
   font-weight: 400;
   position: relative;
-  top: 7px;
+  top: 5px;
   vertical-align: top;
 }
 
@@ -2367,7 +2367,8 @@
     margin-left: 0;
     border: none;
     width: 48px;
-    height: 48px;
+    height: 45px;
+    line-height: 0;
   }
 }
 
@@ -2376,10 +2377,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
-  vertical-align: sub;
+  vertical-align: text-top;
   margin-left: 0.2em;
   margin-right: 0.2em;
-  white-space: nowrap;    
+  white-space: nowrap;
 }
 
 
